<resources>
    <string name="app_name">CVSU Clearance</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="staff">Staff</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="cvsu_email">CvSU Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already registered? Login here</string>
    <string name="student_number">Student Number</string>
    <string name="course">Course</string>
    <string name="Nav_Drawer_Open">Open Navigation Drawer</string>
    <string name="Nav_Drawer_Close">Close Navigation Drawer</string>
    <string name="clearance_form">Clearance Form</string>
    <string name="signing_station_name">Signing Station Name</string>
    <string name="requirements">Requirements</string>
    <string name="station_location">Location</string>
    <string name="signature_name">Signature Name</string>
    <string name="required_sign">Required Sign</string>
    <string name="choose_file">Choose File</string>
    <string name="station">Add Station</string>
    <string name="GettingStartedContent">
        Welcome to the Android-based E-clearance System.
        After you logged in into your account, you will land at the profile screen where you will see all your details.
        In your profile, you will see your pending requirements in every signing stations.
        The first dropdown menu contains all the existing signing stations.
        You can also see the location of the signing station.
        You will be able to see all your pending requirements for the chosen signing station in the second dropdown menu labeled as "Requirements".
        You will also see the requirement description below the dropdown menu to further give you an idea regarding the requirement.
        If you have no pending requirements in the particular signing station, then no requirements will be displayed in the requirement dropdown menu.
    </string>

    <string name="EclearanceForm">
        When you access the menu button on the upper left side of your screen, you will see all the tabs you can navigate to.
        You will see there the E-clearance Form tab. The image below is the interface for the E-clearance form.
        You will see all the verified signing stations in your e-clearance form.
        At the very beginning, it will all start with just the signing station names, without the e-signatures.
        You will then need to comply to every requirements the signing station requires for you to get an e-signature.
    </string>

    <string name="EclearanceForm2">
       You can also view the signing station details by clicking the signing station in the e-clearance form.
        In the picture below, you will see the pop-up panel that contains the signing station name and location, along with a dropdown menu of all of its requirements.
    </string>

    <string name="QRButton">
      Also, in the e-clearance form, you will see a button with an image of a QR code. Your QR code will appear when you click it.
            The image below shows the popup panel that displays your QR code.
        Your QR code will be essential for the whole clearance signing process.
        The signing staff in signing stations will ask you to show your QR code.
        Then, the staff will scan your QR code. The signing staff will have access on viewing your information, along with your pending requirements on the current station.
        You need to comply with the requirements being asked. The signing staff will update your requirement completion status everytime you completed a requirement.
        When you completed all your requirements in a particular signing station, the signing staff will then digitally sign on their designated signing station in your e-clearance form.
        You can now manually refresh the e-clearance form by swiping down to trigger refresh process.
    </string>

    <string name="resetDescription">(Warning: by clicking the button above, you will reset the e-clearance form data by <b>erasing the signing station requirements and reports data</b>. It is advisable to download a CSV copy of the reports before doing this operation. The signing stations, staff sign up code, and all the registered accounts will be retained. Please proceed with caution.)</string>


    <string-array name="roles">
        <item>Student</item>
        <item>Staff</item>
        <item>Administrator</item>
    </string-array>

    <string-array name="courses">
        <item>BS Agricultural and BioSystems Engineering</item>
        <item>BS Architecture</item>
        <item>BS Civil Engineering</item>
        <item>BS Computer Engineering</item>
        <item>BS Computer Science</item>
        <item>BS Electrical Engineering</item>
        <item>BS Electronics Engineering</item>
        <item>BS Industrial Engineering</item>
        <item>BS Industrial Technology - Automotive Tech</item>
        <item>BS Industrial Technology - Electrical Tech</item>
        <item>BS Industrial Technology - Electronics Tech</item>
        <item>BS Information Technology</item>
        <item>BS Office Administration</item>
    </string-array>

    <string-array name="stations">
        <item>CEIT Student Council</item>
        <item>College Property Custodian</item>
        <item>CEIT Reading Room</item>
        <item>University Library</item>
        <item>University Infirmary</item>
        <item>Student Account Section</item>
        <item>Central Student Government</item>
        <item>Dean, Office of Student Affairs</item>
        <item>Department Chairman</item>
        <item>College Registrar</item>
        <item>College Dean</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ForgotPassword"><b>Forgot Password?</b></string>

</resources>