<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/formbg2"
    tools:context="cvsu.clearance.app.AdminMainActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:background="@color/browser_actions_divider_color"
        >

        <TextView
            android:id="@+id/ViewStationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:text="View Stations"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            />
        <Spinner
            android:id="@+id/StaffStation"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:backgroundTint="@color/black"
            android:layout_below="@id/ViewStationLabel"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/viewstationName"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/signing_station_name"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/StaffStation" />

        <EditText
            android:id="@+id/viewstationRequirements"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/requirements"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/viewstationName" />

        <EditText
            android:id="@+id/viewstationLocation"
            android:layout_width="290dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/station_location"
            android:inputType="text"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/viewstationRequirements" />


        <EditText
            android:id="@+id/viewsignatureName"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/signature_name"
            android:inputType="text"
            android:layout_marginLeft="14dp"
            android:layout_below="@+id/viewstationLocation" />

        <Switch
            android:id="@+id/viewrequiredSignSwitch"
            android:layout_width="342dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/required_sign"
            android:textSize="18sp"
            android:layout_below="@+id/viewsignatureName" />

        <Button
            android:id="@+id/updateButtonView"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:text="Update"
            android:textColor="@color/white"
            android:backgroundTint="#26580F"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/viewrequiredSignSwitch" />

        <Button
            android:id="@+id/fileButtonView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:text="@string/choose_file"
           android:layout_toRightOf="@id/viewsignatureName"
            android:layout_below="@+id/viewstationLocation"
            />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="255dp"
            android:layout_height="15dp"
            android:layout_below="@id/updateButtonView"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>