<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/formbg2"
    tools:context="cvsu.clearance.app.AdminMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:padding="10dp"
        android:background="#26580F"
        >

        <ImageView
            android:id="@+id/ProfileIcon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="false"
            android:layout_marginTop="0dp"
            android:background="@drawable/profile_icon"/>

        <TextView
            android:id="@+id/WelcomeAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/ProfileIcon"
            android:layout_centerVertical="false"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="14dp"
            android:textSize="19dp"
            android:text="Hello Admin!"/>

        <TextView
            android:id="@+id/DisplayEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/ProfileIcon"
            android:layout_below="@id/WelcomeAdmin"
            android:layout_marginLeft="14dp"
            android:textSize="14dp"
            android:text="Email"
            />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="89dp"
            android:layout_height="35dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="Logout"

            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textView_ClearanceForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/station"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:id="@+id/stationName"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/signing_station_name"
            android:inputType="text"
            android:layout_below="@id/textView_ClearanceForm" />

        <EditText
            android:id="@+id/stationRequirements"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/requirements"
            android:inputType="text"
            android:layout_below="@+id/stationName" />

        <EditText
            android:id="@+id/stationLocation"
            android:layout_width="346dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/station_location"
            android:inputType="text"
        android:layout_below="@+id/stationRequirements" />


        <EditText
            android:id="@+id/signatureName"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/signature_name"
            android:inputType="text"
            android:layout_below="@+id/stationLocation" />

        <Switch
            android:id="@+id/requiredSignSwitch"
            android:layout_width="342dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/required_sign"
            android:textSize="18sp"
            android:layout_below="@+id/signatureName" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="342dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="200dp"
            android:text="Add"
            android:layout_below="@+id/requiredSignSwitch" />

        <Button
            android:id="@+id/fileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="6dp"
            android:text="@string/choose_file"
           android:layout_toRightOf="@id/signatureName"
            android:layout_below="@+id/stationLocation"
            />

        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="255dp"
            android:layout_height="15dp"
            android:layout_marginStart="181dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="182dp"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/addButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/requiredSignSwitch" />

    </RelativeLayout>

</LinearLayout>